Fix post detail title overflow-y

--- a/css/style.scss
+++ b/css/style.scss
@@ -1211,7 +1211,13 @@ input, textarea, button {
 			color: $light1;
 			position: absolute;
 			left: 5%;
-			top: 0.8rem;}
+			top: 0.8rem;
+			overflow:hidden;
+			text-overflow:ellipsis;
+			display:-webkit-box;
+			-webkit-line-clamp:2;
+			-webkit-box-orient:vertical;
+		}
 		.post_body {
 			padding: 0 0 0.15rem;
 			p, h1, h2, h3, h4, h5, h6, ul, ol, blockquote {
